--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     
     <div class="calculator">
         <div id="display">
-            <h1></h1>
+            <p id="history">0</p>
+            <h1 id="current">0</h1>
         </div>
         <div id="buttons">
             <button id="percent" class="btn">%</button>
@@ -26,7 +27,7 @@
             <button id="seven" class="btn">7</button>
             <button id="eight" class="btn">8</button>
             <button id="nine" class="btn">9</button>
-            <button id="multi" class="btn">x</button>
+            <button id="multi" class="btn">*</button>
 
             <button id="four" class="btn">4</button>
             <button id="five" class="btn">5</button>
@@ -36,7 +37,7 @@
             <button id="one" class="btn">1</button>
             <button id="two" class="btn">2</button>
             <button id="three" class="btn">3</button>
-            <button id="plus" class="btn">+</button>
+            <button id="plus" class="btn">/</button>
 
             <button id="negate" class="btn"><sup>+</sup>/-</button>
             <button id="zero" class="btn">0</button>
