--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     
     <div class="calculator">
         <div id="display">
+        <button onclick="toggleHistory()" class="buttonmove">Show History</button>
             <p id="history">0</p>
             <h1 id="current">0</h1>
+        </div id="history page">
+
+        <div>
+
         </div>
+
         <div id="buttons">
             <button id="percent" class="btn">%</button>
             <button id="clearEntry" class="btn">CE</button>
