added some code for delete buttons

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button id="reciprocal" class="btn"><sup>1</sup>/x</button>
             <button id="squared" class="btn">x<sup>2</sup></button>
             <button id="sqRoot" class="btn"><sup>2</sup>&#8730;x</button>
-            <button id="division" class="btn">÷</button>
+            <button id="division" class="btn">/</button>
 
             <button id="seven" class="btn">7</button>
             <button id="eight" class="btn">8</button>
@@ -37,7 +37,7 @@
             <button id="one" class="btn">1</button>
             <button id="two" class="btn">2</button>
             <button id="three" class="btn">3</button>
-            <button id="plus" class="btn">/</button>
+            <button id="plus" class="btn">+</button>
 
             <button id="negate" class="btn"><sup>+</sup>/-</button>
             <button id="zero" class="btn">0</button>
